--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "background": {
       "service_worker": "background.js"
     },
-    "permissions": ["storage", "activeTab", "scripting", "tabs"],
+    "permissions": ["storage", "activeTab", "scripting", "tabs", "storage"],
     "action": {
       "default_popup": "popup.html"
     },
